@@ -559,10 +559,12 @@ Xu          ,Xu          , Qxu         , Qxu         , Ql          , Ql         
         [filter]
             x,y=9,3
         [/filter]
-        [endlevel]
-            result="victory"
-            bonus=yes
-        [/endlevel]
+        {VARIABLE endlevel_test.result "victory"}
+        {VARIABLE endlevel_test.bonus "yes"}
+        [insert_tag]
+            name=endlevel
+            variable=endlevel_test
+        [/insert_tag]
     [/event]
 
     [event]
